fixed graph not fitting height of container

--- a/webapp/frontend/src/views/views.css
+++ b/webapp/frontend/src/views/views.css
@@ -109,20 +109,22 @@ body {
 
 
 .graphs-section {
-    flex: 3;
-    margin-right: 20px;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+    flex: 3!important;
+    margin-right: 20px!important;
+    display: flex!important;
+    flex-direction: column!important;
+    height: 100%!important;
 }
 
 .graph-section {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+    flex: 1!important;
+    display: flex!important;
+    flex-direction: column!important;
+    height: 100%!important;
+    
 }
 
 .graph-container {
-    flex: 1;
+    flex: 1 !important;
+    height: 100%
 }
